# kartoteka

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  README.md  chat,  deny.toml  justfile  lefthook.yml  release-please-config.json  release-plz.toml
crates/api/: Cargo.toml  wrangler.toml
crates/api/migrations/: 0001_initial_schema.sql  0002_tags.sql  0003_add_user_id_to_lists.sql  0004_feature_slices.sql  0005_remove_tag_category.sql  0006_list_description.sql  0007_list_features.sql  0008_richer_dates.sql  0009_deadlines_feature.sql  0010_containers.sql  0011_user_preferences.sql  0011_user_settings.sql  0012_unify_user_settings.sql  0013_instance_settings.sql  0014_items_search_fts.sql  0015_search_entities_fts.sql
crates/api/src/: auth.rs  cursor.rs  error.rs  helpers.rs  lib.rs  router.rs
crates/api/src/handlers/: admin.rs  containers.rs  items.rs  lists.rs  me.rs  mod.rs  pagination.rs  preferences.rs  public.rs  search.rs  settings.rs  tags.rs
crates/api/src/handlers/containers/: children.rs  crud.rs  home.rs  mod.rs  pin.rs  reorder.rs
crates/api/src/handlers/items/: calendar.rs  crud.rs  mod.rs  placement.rs  search.rs  validation.rs
crates/api/src/handlers/lists/: archive.rs  crud.rs  features.rs  mod.rs  pin.rs  placement.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_init.sql  002_totp_used_codes.sql  003_oauth.sql  004_lists_features_json.sql  005_token_expiry_backfill.sql  006_checklist_feature_backfill.sql
crates/db/src/: auth_methods.rs  comments.rs  containers.rs  home.rs  items.rs  lib.rs  lists.rs  oauth.rs  personal_tokens.rs  preferences.rs  relations.rs  search.rs  server_config.rs  settings.rs  tags.rs  templates.rs  test_helpers.rs  time_entries.rs  totp.rs  types.rs  users.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  comments.rs  containers.rs  home.rs  items.rs  lib.rs  lists.rs  paging.rs  preferences.rs  relations.rs  search.rs  settings.rs  tags.rs  templates.rs  time_entries.rs
crates/domain/src/rules/: containers.rs  items.rs  lists.rs  mod.rs  tags.rs
crates/frontend/: Cargo.toml  Trunk.toml  hanko-init.js.template  index.html  manifest.json  package-lock.json  service-worker.js
crates/frontend/src/: api.rs  app.rs  context.rs  lib.rs  main.rs  utils.rs
crates/frontend/src/api/: admin.rs  client.rs  containers.rs  items.rs  lists.rs  mod.rs  preferences.rs  search.rs  settings.rs  tags.rs
crates/frontend/src/components/: add_group_input.rs  add_item_input.rs  confirm_delete_modal.rs  date_item_row.rs  editable_color.rs  item_actions.rs  item_row.rs  list_card.rs  list_header.rs  list_tag_bar.rs  mod.rs  nav.rs  pwa_runtime.rs  sublist_section.rs  sync_locale.rs  tag_badge.rs  tag_filter_bar.rs  tag_list.rs  tag_selector.rs  tag_tree.rs  toast_container.rs
crates/frontend/src/components/calendar/: calendar_nav.rs  item_row.rs  mod.rs  month_grid.rs  week_view.rs
crates/frontend/src/components/comments/: add_comment.rs  comment_list.rs
crates/frontend/src/components/common/: breadcrumbs.rs  confirm_delete_modal.rs  confirm_modal.rs  date_utils.rs  dnd.rs  editable_color.rs  editable_description.rs  editable_title.rs  error_display.rs  inline_confirm_button.rs  list_filter_chips.rs  loading.rs  mod.rs  toast_container.rs
crates/frontend/src/components/filters/: filter_chips.rs  mod.rs
crates/frontend/src/components/home/: mod.rs  pinned_section.rs  recent_section.rs
crates/frontend/src/components/items/: add_input.rs  add_item_input.rs  date_badge_chips.rs  date_editor.rs  date_field.rs  date_item_row.rs  inline_date_editor_section.rs  item_actions.rs  item_date_summary.rs  item_row.rs  mod.rs  quantity_stepper.rs
crates/frontend/src/components/lists/: add_group_input.rs  add_input.rs  add_item_input.rs  container_card.rs  create_entity_input.rs  deadlines_config.rs  list_card.rs  list_header.rs  list_tag_bar.rs  mod.rs  sublist_section.rs
crates/frontend/src/components/relations/: mod.rs
crates/frontend/src/components/tags/: color_picker.rs  mod.rs  tag_badge.rs  tag_filter_bar.rs  tag_list.rs  tag_tree.rs  (+1 more)
crates/frontend/src/pages/: container.rs  home.rs  item_detail.rs  list.rs  login.rs  mod.rs  oauth_consent.rs  search.rs  settings.rs  signup.rs  tag_detail.rs  tags.rs  time.rs  today.rs
crates/frontend/src/server_fns/: containers.rs  home.rs  items.rs  lists.rs  relations.rs  settings.rs  templates.rs  time_entries.rs  utils.rs
crates/frontend/src/state/: admin.rs  calendar_route.rs  dnd.rs  item_mutations.rs  mod.rs  reorder.rs  search_route.rs  transforms.rs  view_helpers.rs
crates/frontend/style/: input.css  main.css
crates/jobs/: Cargo.toml
crates/logging/: Cargo.toml
crates/logging/src/: error.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client_ref.rs  i18n.rs  lib.rs  resources.rs  server.rs
crates/mcp/src/server/: annotations.rs  batch.rs
crates/mcp/src/tools/: comments.rs  items.rs  mod.rs  read.rs  relations.rs  search.rs  tags.rs  templates.rs  time.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: bearer.rs  errors.rs  handlers.rs  lib.rs  pkce.rs  storage.rs  types.rs
crates/oauth/tests/: register.rs  token_flow.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  error.rs  extractors.rs  health.rs  items.rs  lib.rs  lists.rs  main.rs  relations.rs  search.rs  settings.rs  tags.rs  templates.rs  time_entries.rs
crates/server/src/routes/: containers.rs  home.rs  mod.rs
crates/server/tests/: auth_integration.rs  lists_routes.rs  mcp_oauth_e2e.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth_ctx.rs  constants.rs  date_utils.rs  deserializers.rs  lib.rs  types.rs  validation.rs
crates/shared/src/dto/: requests.rs  responses.rs
crates/shared/src/models/: container.rs  invitation_code.rs  item.rs  list.rs  mod.rs  search.rs  settings.rs  tag.rs  user.rs
crates/shared/src/tests/: containers.rs  deserializers.rs  flex_date.rs  items.rs  lists.rs  mod.rs  patch_requests.rs  search.rs  tags.rs
(+253 files in other folders)
