[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/api",
    "crates/frontend",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# Leptos view! macro patterns
unused_unit = "allow"
let_unit_value = "allow"
needless_pass_by_value = "allow"
# Leptos view! passes unit values to component functions
unit_arg = "allow"
# Leptos signals implement Copy but .clone() is idiomatic in closures
clone_on_copy = "allow"
# Leptos view! macro generates complex types
type_complexity = "allow"
