[package]
name = "kartoteka-api"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
worker = { version = "0.7", features = ["d1"] }
sqlx-d1 = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
