[package]
name = "kartoteka-api"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
kartoteka-i18n = { path = "../i18n", version = "0.1.1" }
kartoteka-logging = { path = "../logging" }
tracing = "0.1"
nanoid = "0.4"
worker = { version = "0.7", features = ["d1"] }
sqlx-d1 = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
