[package]
name = "kartoteka-api"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.4.1" }
kartoteka-i18n = { path = "../i18n", version = "0.4.1" }
kartoteka-logging = { path = "../logging", version = "0.4.1" }
tracing = "0.1"
nanoid = "0.4"
getrandom = { version = "0.2", features = ["js"] }
worker = { version = "0.7", features = ["d1"] }
sqlx-d1 = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }

[package.metadata.cargo-machete]
# getrandom: required for nanoid WASM compat (features = ["js"]), not imported directly;
# kartoteka-i18n: used via macro expansion; sqlx-d1: used via sqlx macros
ignored = ["getrandom", "kartoteka-i18n", "sqlx-d1"]
