[package]
name = "kartoteka-auth"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
kartoteka-domain = { path = "../domain", version = "0.1.1" }
kartoteka-db = { path = "../db", version = "0.1.1" }
axum-login.workspace = true
tower-sessions.workspace = true
argon2.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
kartoteka-db = { path = "../db", version = "0.1.1", features = ["test-helpers"] }
