[package]
name = "kartoteka-frontend"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
kartoteka-i18n = { path = "../i18n", version = "0.1.1" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos-fluent = "0.2"
leptos_meta = "0.7"
gloo-net = { version = "0.7", features = ["http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window", "RequestCredentials", "Location", "Navigator", "Clipboard"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
send_wrapper = "0.6"
wasm-bindgen-futures = "0.4"
