[package]
name = "kartoteka-frontend"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
chrono = { version = "0.4.44", default-features = false, features = ["alloc"] }
kartoteka-i18n = { path = "../i18n", version = "0.1.1" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos-fluent = "0.3"
leptos_meta = "0.8"
gloo-net = { version = "0.7", features = ["http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window", "RequestCredentials", "Location", "Navigator", "Clipboard"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[[bin]]
name = "kartoteka-frontend"
test = false

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
