[package]
name = "kartoteka-frontend"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared", version = "0.1.1" }
kartoteka-i18n = { path = "../i18n", version = "0.1.1" }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true, optional = true }
leptos-fluent = { workspace = true }
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }

# Hydrate-only (compiled to WASM)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
# web-sys is non-optional so DnD component types (DragEvent, DataTransfer)
# are available in both hydrate and ssr builds (handlers compile SSR but never run).
web-sys = { workspace = true, features = [
    "Storage", "Window", "Navigator", "Clipboard", "Location",
    "Document", "HtmlElement", "DragEvent", "DataTransfer",
] }
console_error_panic_hook = { workspace = true, optional = true }

# SSR-only (native, runs on server)
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
kartoteka-domain = { path = "../domain", version = "0.1.1", optional = true }
kartoteka-auth = { path = "../auth", version = "0.1.1", optional = true }
kartoteka-db = { path = "../db", version = "0.1.1", optional = true }
kartoteka-oauth = { path = "../oauth", version = "0.1.1", optional = true }
tower-sessions = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos-fluent/hydrate",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos-fluent/ssr",
    "leptos-fluent/axum",
    "dep:leptos_meta",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-login",
    "dep:sqlx",
    "dep:kartoteka-domain",
    "dep:kartoteka-auth",
    "dep:kartoteka-db",
    "dep:kartoteka-oauth",
    "dep:tower-sessions",
    "dep:chrono-tz",
    "dep:tokio",
]
