[package]
name = "kartoteka-jobs"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["kartoteka-domain", "kartoteka-shared"]

[dependencies]
kartoteka-shared = { path = "../shared" }
kartoteka-domain = { path = "../domain" }
