[package]
name = "kartoteka-oauth"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared" }
kartoteka-domain = { path = "../domain" }
kartoteka-auth = { path = "../auth" }
kartoteka-db = { path = "../db" }

axum = { workspace = true }
axum-login = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
http = "1"
jsonwebtoken = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
uuid = { workspace = true }
chrono = { workspace = true }
subtle = "2.6"
urlencoding = "2"

[package.metadata.cargo-machete]
ignored = ["kartoteka-domain", "tracing"]

[dev-dependencies]
hmac = "0.12"
tower = { version = "0.5", features = ["util"] }
kartoteka-db = { path = "../db", features = ["test-helpers"] }
