[package]
name = "kartoteka-server"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "kartoteka"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
kartoteka-shared = { path = "../shared" }
kartoteka-db = { path = "../db" }
kartoteka-domain = { path = "../domain" }
kartoteka-auth = { path = "../auth" }
kartoteka-mcp = { path = "../mcp" }
kartoteka-oauth = { path = "../oauth" }
kartoteka-jobs = { path = "../jobs" }
kartoteka-frontend-v2 = { path = "../frontend-v2" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
axum-login.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
tower-http.workspace = true
time.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
axum-login.workspace = true
kartoteka-db = { path = "../db", features = ["test-helpers"] }
kartoteka-domain = { path = "../domain" }
kartoteka-auth = { path = "../auth" }
serde_json.workspace = true
totp-rs.workspace = true
