[package]
name = "kartoteka-shared"
version.workspace = true
edition.workspace = true
license = "MIT"

[lints]
workspace = true

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
sqlx = { workspace = true, optional = true }
