[package]
name = "kartoteka-shared"
version.workspace = true
edition.workspace = true
license = "MIT"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["schemars"]

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
chrono-tz = { workspace = true }
schemars = "0.8"
sqlx = { workspace = true, optional = true }
